Add overlay background

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,8 @@
-/* add css module styles here (optional) */
+.flmodale {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
-  text-align: center;
 }
