Add "fixedWidthHeight" centering option

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,19 +1,7 @@
-.flmodale {
+.flmodal {
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-}
-.modale {
-  background-color: blue;
-
-  position: absolute;
-  top: 0;
-  right: 50%;
-  bottom: auto;
-  left: 50%;
-
-  height: 50%;
-  width: 50%;
 }
