Update readme and beautify modal

--- a/src/flmodal.css
+++ b/src/flmodal.css
@@ -14,3 +14,9 @@
 .close {
   position: absolute;
 }
+.flmodal button {
+  appearance: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
